fix: overflow css

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -22,7 +22,7 @@
   padding-left: 1rem;
   padding-right: 1rem;
   min-width: 0;
-  max-width: 48.75rem;
+  max-width: 100vw;
   margin-left: auto;
   margin-right: auto;
 }
